# frascr

./: CMakeLists.txt  README.md  brdconf.txt  debug.c  debug.h  gmjconf.txt  jconf.txt  libopen.c  libopen.h  mand_v2.c  mconf.txt  options.c  options.h.in  options_struct.h  tconf.txt  utils.h
color/: CMakeLists.txt  color.c  color.h  numtype.h  reference.c  reference.h  standards.json
lib/: CMakeLists.txt  bitorder.h  libbrd.c  libbrd.h  libbwpng.c  libbwpng.h  libcolorpng.c  libgeneralmjexponential.c  libgeneralmjexponential.h  libjuliaquadbrute.c  libjuliaquadbrute.h  libmandelquadbrute.c  libmandelquadbrute.h  libminimalout.c  libminimalout.h
